# cpp_trade_engine

./: .gitignore  CMakeLists.txt  benchmark_results.csv  engine_bench  plot_benchmarks.py
Components/LoggerTest/: LFQueue.h  Logger.h  main.cpp
app/: main.cpp
benchmark_engine/: benchmark_engine.cpp
core/include/: DMemPool.h  Logger.h  macros.h
include/: DMpool.h  Logger.h  MatchingEngine.h  Order.h
